1999-10-14  Bill Nottingham  <notting@redhat.com>

	* rc.d/init.d/network: fix typo

1999-10-12  Matt Wilson  <msw@redhat.com>

	* initscripts.spec, prefdm:
	updated

1999-10-11  Bill Nottingham  <notting@redhat.com>

	* sysconfig/network-scripts/ifup-aliases:
	add support for linuxconf aliases

	* rc.d/rc.sysinit: fix for Jensens.

1999-10-06  Bill Nottingham  <notting@redhat.com>

	* service: fix it. Really, we mean it.

1999-10-05  Bill Nottingham  <notting@redhat.com>

	* rc.d/rc.sysinit, sysconfig/init, sysconfig.txt:
	control stop-a like magic sysrq

1999-10-05  Jakub Jelinek  <jakub@redhat.com>

	* rc.d/rc.sysinit:
	If /etc/sysconfig/keyboard is not present (on serial console), don't complain.

1999-10-04  Bill Nottingham  <notting@redhat.com>

	* rc.d/init.d/halt, rc.d/rc.sysinit:
	check for aumix-minimal before execution

1999-10-02  Bill Nottingham  <notting@redhat.com>

	* ChangeLog, rc.d/rc.sysinit, src/loglevel.c, src/Makefile:
	duh. can we say, duplicated functionality?

1999-09-30  Bill Nottingham  <notting@redhat.com>

	* rc.d/rc.local:
	wow, that was broken. I wonder how it worked before.

1999-09-29  Bill Nottingham  <notting@redhat.com>

	* rc.d/init.d/halt:
	add an extra awk check to make sure we omit root fs.

	* initscripts.spec: req. e2fsprogs >= 1.15

1999-09-28  Michael K. Johnson  <johnsonm@redhat.com>

	* src/ppp-watch.c:
	recover if dead daemon left pidfile

	* src/ppp-watch.c:
	exit after deleting pidfile...

	* src/ppp-watch.c:
	really fix pidfile locking...

	* src/ppp-watch.c: proper file locking

1999-09-26  Bill Nottingham  <notting@redhat.com>

	* lang.csh: typo

1999-09-24  Bill Nottingham  <notting@redhat.com>

	* rc.d/rc.sysinit: use fsck's completion bar

	* lang.csh, lang.sh:
	locale: C -> en_US

1999-09-23  Michael K. Johnson  <johnsonm@redhat.com>

	* initscripts.spec: new version

	* src/ppp-watch.c:
	kill nicely, try to hang up modem

	* src/ppp-watch.c:
	be more careful about killing
