@@ -1,3 +1,15 @@
+1999-10-18  Bill Nottingham  <notting@redhat.com>
+
+	* src/process.c:
+	some fixes from Tymm Twillman (in theory, we leak less now)
+
+	* rc.d/init.d/network:
+	handle weird linuxconf 'any' static routes
+
+1999-10-17  Bill Nottingham  <notting@redhat.com>
+
+	* src/process.c: oops. DWIM, not as I say.
+
 1999-10-14  Bill Nottingham  <notting@redhat.com>
 
 	* rc.d/init.d/network: fix typo
